--- a/FusedVR.csproj
+++ b/FusedVR.csproj
@@ -2,8 +2,6 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <CscToolPath>C:\Program Files\Unity\Hub\Editor\2019.4.23f1\Editor\Data\Tools\RoslynScripts</CscToolPath>
-    <CscToolExe>unity_csc.bat</CscToolExe>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -49,10 +47,14 @@
   <PropertyGroup>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Unity/VSTU</UnityProjectGenerator>
+    <UnityProjectGeneratorVersion>4.11.3.0</UnityProjectGeneratorVersion>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WebGL:20</UnityBuildTarget>
     <UnityVersion>2019.4.23f1</UnityVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2019.4.23f1\Editor\Data\Managed/UnityEngine/UnityEngine.dll</HintPath>
@@ -255,134 +257,131 @@
     <Reference Include="UnityEditor.WebGL.Extensions">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.23f1/Editor/Data/PlaybackEngines/WebGLSupport/UnityEditor.WebGL.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.Android.Extensions">
-      <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.23f1/Editor/Data/PlaybackEngines/AndroidPlayer/UnityEditor.Android.Extensions.dll</HintPath>
-    </Reference>
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
-      <HintPath>C:/Program Files (x86)/Microsoft Visual Studio Tools for Unity/15.0/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
+      <HintPath>C:/Program Files (x86)/Microsoft Visual Studio Tools for Unity/16.0/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
     <Reference Include="BouncyCastle.Crypto">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/BouncyCastle.Crypto.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/BouncyCastle.Crypto.dll</HintPath>
     </Reference>
     <Reference Include="Common.Logging.Core">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Common.Logging.Core.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Common.Logging.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Extensions.Logging.Abstractions">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="NBitcoin">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/NBitcoin.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/NBitcoin.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.ABI">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.ABI.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.ABI.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Accounts">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Accounts.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Accounts.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Contracts">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Contracts.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Contracts.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Geth">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Geth.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Geth.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.HdWallet">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.HdWallet.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.HdWallet.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Hex">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Hex.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Hex.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.JsonRpc.Client">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.JsonRpc.Client.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.JsonRpc.Client.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.JsonRpc.IpcClient">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.JsonRpc.IpcClient.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.JsonRpc.IpcClient.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.JsonRpc.RpcClient">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.JsonRpc.RpcClient.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.JsonRpc.RpcClient.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.JsonRpc.WebSocketClient">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.JsonRpc.WebSocketClient.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.JsonRpc.WebSocketClient.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.KeyStore">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.KeyStore.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.KeyStore.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Model">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Model.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Model.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Parity">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Parity.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Parity.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Quorum">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Quorum.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Quorum.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.RLP">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.RLP.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.RLP.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.RPC">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.RPC.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.RPC.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Signer">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Signer.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Signer.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.StandardTokenEIP20">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.StandardTokenEIP20.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.StandardTokenEIP20.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Unity">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Unity.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Unity.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Util">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Util.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Util.dll</HintPath>
     </Reference>
     <Reference Include="Nethereum.Web3">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Web3.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Nethereum.Web3.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/Newtonsoft.Json.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Buffers">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/System.Buffers.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.IO.Pipes">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/System.IO.Pipes.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/System.IO.Pipes.dll</HintPath>
     </Reference>
     <Reference Include="System.Numerics">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/System.Numerics.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/System.Numerics.dll</HintPath>
     </Reference>
     <Reference Include="System.Security.Cryptography.Algorithms">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/System.Security.Cryptography.Algorithms.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/System.Security.Cryptography.Algorithms.dll</HintPath>
     </Reference>
     <Reference Include="System.Security.Cryptography.Encoding">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/System.Security.Cryptography.Encoding.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/System.Security.Cryptography.Encoding.dll</HintPath>
     </Reference>
     <Reference Include="System.Security.Cryptography.Primitives">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/System.Security.Cryptography.Primitives.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/System.Security.Cryptography.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Security.Cryptography.X509Certificates">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Assets/NEther/Plugins/System.Security.Cryptography.X509Certificates.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Assets/NEther/Plugins/System.Security.Cryptography.X509Certificates.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/PackageCache/com.unity.analytics@3.3.5/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/PackageCache/com.unity.analytics@3.3.5/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/PackageCache/com.unity.analytics@3.3.5/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/PackageCache/com.unity.analytics@3.3.5/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/PackageCache/com.unity.analytics@3.3.5/AnalyticsStandardEvents/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/PackageCache/com.unity.analytics@3.3.5/AnalyticsStandardEvents/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Malimbe.BehaviourStateRequirementMethod">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.BehaviourStateRequirementMethod.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.BehaviourStateRequirementMethod.dll</HintPath>
     </Reference>
     <Reference Include="Malimbe.MemberChangeMethod">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.MemberChangeMethod.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.MemberChangeMethod.dll</HintPath>
     </Reference>
     <Reference Include="Malimbe.MemberClearanceMethod">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.MemberClearanceMethod.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.MemberClearanceMethod.dll</HintPath>
     </Reference>
     <Reference Include="Malimbe.PropertySerializationAttribute">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.PropertySerializationAttribute.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.PropertySerializationAttribute.dll</HintPath>
     </Reference>
     <Reference Include="Malimbe.XmlDocumentationAttribute">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.XmlDocumentationAttribute.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/PackageCache/io.extendreality.malimbe@9.6.6/Runtime/Malimbe.XmlDocumentationAttribute.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.23f1/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
@@ -739,22 +738,22 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.23f1/Editor/Data/MonoBleedingEdge/lib/mono/unityscript/Boo.Lang.dll</HintPath>
     </Reference>
     <Reference Include="WebXR">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/ScriptAssemblies/WebXR.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/ScriptAssemblies/WebXR.dll</HintPath>
     </Reference>
     <Reference Include="Zinnia.Runtime">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/ScriptAssemblies/Zinnia.Runtime.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/ScriptAssemblies/Zinnia.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Tilia.Interactions.Interactables.Unity.Runtime">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/ScriptAssemblies/Tilia.Interactions.Interactables.Unity.Runtime.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/ScriptAssemblies/Tilia.Interactions.Interactables.Unity.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>D:/FusedVR/Projects/WebXR-ETH/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>C:/Users/13129/Documents/Intro-Game-Dev/Unity Projects/WebXR-ETH/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup></ItemGroup>
